--- a/render/index.html
+++ b/render/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="keywords" content="senrio">
-    <!-- <base href="/"> -->
     <title>Twitter miner</title>
     <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/css/bootstrap-theme.min.css">
@@ -15,8 +13,6 @@
     <div ui-view="">
       <div ng-include="'views/home.html'"  ng-controller="HomeCtrl as $ctrl"></div>
     </div>
-
-    <!-- <script type="text/javascript" src="vendor/js/jquery.min.js"></script> -->
     <script>window.$ = window.jQuery = require('./vendor/js/jquery.min.js');</script>
     <script type="text/javascript" src="vendor/js/angular.min.js"></script>
     <script type="text/javascript" src="vendor/js/angular-animate.min.js"></script>
@@ -31,14 +27,12 @@
     <script type="text/javascript" src="vendor/js/angular-route.min.js"></script>
     <script type="text/javascript" src="vendor/js/angular-sanitize.min.js"></script>
     <script type="text/javascript" src="vendor/js/angular-touch.min.js"></script>
-    <script type="text/javascript" src="vendor/js/ng-csv.min.js"></script>
-    <!-- <script type="text/javascript" src="vendor/js/ui-bootstrap-tpls.min.js"></script> -->
-    <script type="text/javascript" src="vendor/js/ui-bootstrap-custom.min.js"></script>
-    <script type="text/javascript" src="vendor/js/ui-bootstrap-custom-tpls.min.js"></script>
-
+    <script type="text/javascript" src="vendor/js/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/services/twitter.js"></script>
     <script type="text/javascript" src="js/controllers/home.js"></script>
+    <script type="text/javascript" src="js/controllers/resume-modal.js"></script>
     <script type="text/javascript" src="js/filters/pagination.js"></script>
+    <script type="text/javascript" src="js/filters/time-format.js"></script>
   </body>
 </html>
