--- a/render/index.html
+++ b/render/index.html
@@ -29,9 +29,11 @@
     <script type="text/javascript" src="vendor/js/angular-touch.min.js"></script>
     <script type="text/javascript" src="vendor/js/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/services/application.js"></script>
     <script type="text/javascript" src="js/services/twitter.js"></script>
     <script type="text/javascript" src="js/controllers/home.js"></script>
-    <script type="text/javascript" src="js/controllers/resume-modal.js"></script>
+    <script type="text/javascript" src="js/controllers/modals/resume.js"></script>
+    <script type="text/javascript" src="js/controllers/modals/application-keys.js"></script>
     <script type="text/javascript" src="js/filters/pagination.js"></script>
     <script type="text/javascript" src="js/filters/time-format.js"></script>
   </body>
